@@ -1,5 +1,11 @@
 2005-11-28  Julien MOUTTE  <julien@moutte.net>
 
+	* sys/xvimage/xvimagesink.c:
+	(gst_xvimagesink_navigation_send_event): Fix navigation events
+	coordinates translation with pixel aspect ratios.
+
+2005-11-28  Julien MOUTTE  <julien@moutte.net>
+
 	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_xvimage_put):
 	Use calculated video geometry from _setcaps instead of buffer
 	caps to respect pixel aspect ratio. (fixes #322388)
